# finances

./: .readthedocs.yaml  LICENSE  README.md  default_credential.py  mkdocs.yml  models.py  pyproject.toml  requirements.txt  server.py  system.py
$HOME/: .pypirc
docs/: index.md  quickstart.md  server.md  system.md
docs/database/: database.md
finances/: mkdocs.yml
finances/docs/: index.md  server.md  system.md
src/: __init__.py  models.py  server.py  system.py
src/Joao_Marcionilo_finances.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
